// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`google integration formatUserList 1`] = `
Set {
  "chrisns",
  "foo",
  "tar",
  "bar",
}
`;

exports[`google integration formatUserList bad 1`] = `
Set {
  "chrisns",
  "userspace",
}
`;

exports[`google integration getGithubUsersFromGoogle 1`] = `
Set {
  "chrisns",
  "foo",
  "tar",
  "bar",
}
`;

exports[`google integration googleAuth 1`] = `
[MockFunction] {
  "calls": [
    [
      "foo",
      null,
      "bar",
      [
        "https://www.googleapis.com/auth/admin.directory.user.readonly",
      ],
      "hello@example.com",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
